--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
+  <script defer src="vendor/pristine/pristine.min.js"></script>
   <script defer src="js/main.js" type="module"></script>
   <script defer src="js/helpers/functions.js"></script>
 </head>
