--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
   <script defer src="vendor/pristine/pristine.min.js"></script>
+  <script defer src="vendor/nouislider/nouislider.js"></script>
   <script defer src="js/main.js" type="module"></script>
   <script defer src="js/helpers/functions.js"></script>
 </head>
